--- a/hello_world/templates/index.html
+++ b/hello_world/templates/index.html
@@ -19,13 +19,11 @@
 <body>
     <div class="App">
         <header class="App-header">
-            <img src="{% static 'Octocat.png' %}" class="App-logo" alt="logo" />
+          
             <p>
-                GitHub Codespaces <span class="heart">♥️</span> Django
+                Tutor GPT
             </p>
-            <p class="small">
-                Edit <code>hello_world/templates/index.html</code> and see changes live!
-            </p>
+     
         </header>
     </div>
 </body>
